<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/video_player"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="8dp" />

    <ImageView
        android:id="@+id/step_video_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:paddingEnd="16dp"
        android:paddingStart="0dp" />

    <TextView
        android:id="@+id/recipe_step_detail_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/recipe_previous_step"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_navigate_before_black_18dp"
            android:backgroundTintMode="src_over"
            android:elevation="6dp"
            android:padding="40dp" />

        <Button
            android:id="@+id/recipe_next_step"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_navigate_next_black_18dp"
            android:backgroundTintMode="src_over"
            android:elevation="6dp"
            android:padding="40dp" />
    </LinearLayout>
</LinearLayout>
